--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1599,6 +1599,10 @@ body {
 .cid-qN85xyleJn .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
+.cid-qN85xyleJn .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-qN85xyleJn .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
 .cid-qN85xyleJn .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qN85xyleJn .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1693,6 +1697,10 @@ body {
   .cid-qN85xyleJn .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
+  .cid-qN85xyleJn .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-qN85xyleJn .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
   .cid-qN85xyleJn .navbar-collapse.collapsing .navbar-buttons,
   .cid-qN85xyleJn .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -1778,6 +1786,26 @@ body {
 }
 .cid-qN86o5OHjU .card {
   padding-bottom: 1.5rem;
+}
+.cid-qN89KcjoMz {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/background4.jpg");
+}
+@media (min-width: 992px) {
+  .cid-qN89KcjoMz .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-qN89KcjoMz .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qN89KcjoMz .mbr-text {
+    text-align: center;
+  }
 }
 .cid-qN85xA06mA {
   padding-top: 60px;
